[tool.poetry]
name = "pybigquery-merge-into"
version = "0.1.0"
description = "Add support for bigquery's MERGE INTO feature to pybigquery"
authors = ["Martin Keogh <martin1keogh@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
pybigquery = "^0.8.0"
SQLAlchemy = "^1.4.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
sqlparse = "^0.4.1"
mypy = "^0.812"
SQLAlchemy = {version = "^1.4.12", extras = ["mypy"]}
sqlalchemy2-stubs = "^0.0.2a1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
